--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,9 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
 			<scope>test</scope>
-			<version>1.4.194</version>
 		</dependency>
 	</dependencies>
 
